Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> ROBOT_R var_def PROCS
Rule 2     prog -> ROBOT_R var_def PROCS bloque_def
Rule 3     prog -> ROBOT_R var_def PROCS bloque_def LBRACKET final_def RBRACKET
Rule 4     var_def -> VARS ID_list SEMICOLON
Rule 5     ID_list -> ID
Rule 6     ID_list -> ID_list COMMA ID
Rule 7     bloque_def -> id_def
Rule 8     bloque_def -> bloque_def id_def
Rule 9     id_def -> ID LBRACKET PLECA id_func PLECA func_def RBRACKET
Rule 10    id_func -> ID
Rule 11    id_func -> ID COMMA id_func
Rule 12    final_def -> ID DOSPUNTOS INTEGER COMMA INTEGER
Rule 13    final_def -> final_def ID DOSPUNTOS INTEGER COMMA INTEGER
Rule 14    func_def -> function_def
Rule 15    func_def -> func_def SEMICOLON function_def
Rule 16    func_def -> if_else_def
Rule 17    func_def -> while_def
Rule 18    if_else_def -> if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET function_def RBRACKET else DOSPUNTOS LBRACKET function_def RBRACKET
Rule 19    if_else_def -> if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET if_else_def RBRACKET else DOSPUNTOS LBRACKET function_def RBRACKET
Rule 20    if_else_def -> if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET function_def RBRACKET else DOSPUNTOS LBRACKET if_else_def RBRACKET
Rule 21    if_else_def -> if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET if_else_def RBRACKET else DOSPUNTOS LBRACKET if_else_def RBRACKET
Rule 22    while_def -> while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET function_def RBRACKET
Rule 23    while_def -> while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET if_else_def RBRACKET
Rule 24    while_def -> while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET while_def RBRACKET
Rule 25    function_def -> assignTo_def
Rule 26    function_def -> put_def
Rule 27    function_def -> moveandjumptothe_def
Rule 28    function_def -> moveandjumpindir_def
Rule 29    function_def -> move_def
Rule 30    function_def -> goto_def
Rule 31    function_def -> turn_def
Rule 32    function_def -> face_def
Rule 33    function_def -> nop_def
Rule 34    assignTo_def -> assignTo DOSPUNTOS INTEGER COMMA ID
Rule 35    put_def -> put DOSPUNTOS ID COMMA ITEMS
Rule 36    put_def -> put DOSPUNTOS INTEGER COMMA ITEMS
Rule 37    put_def -> pick DOSPUNTOS INTEGER COMMA ITEMS
Rule 38    put_def -> pick DOSPUNTOS ID COMMA ITEMS
Rule 39    moveandjumptothe_def -> movetothe DOSPUNTOS ID COMMA DIRECTION
Rule 40    moveandjumptothe_def -> movetothe DOSPUNTOS INTEGER COMMA DIRECTION
Rule 41    moveandjumptothe_def -> jumptothe DOSPUNTOS INTEGER COMMA DIRECTION
Rule 42    moveandjumptothe_def -> jumptothe DOSPUNTOS ID COMMA DIRECTION
Rule 43    moveandjumptothe_def -> movetothe DOSPUNTOS ID COMMA LEFTANDRIGHT
Rule 44    moveandjumptothe_def -> movetothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
Rule 45    moveandjumptothe_def -> jumptothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
Rule 46    moveandjumptothe_def -> jumptothe DOSPUNTOS ID COMMA LEFTANDRIGHT
Rule 47    moveandjumpindir_def -> moveindir DOSPUNTOS ID COMMA CARDINAL
Rule 48    moveandjumpindir_def -> moveindir DOSPUNTOS INTEGER COMMA CARDINAL
Rule 49    moveandjumpindir_def -> jumpindir DOSPUNTOS INTEGER COMMA CARDINAL
Rule 50    moveandjumpindir_def -> jumpindir DOSPUNTOS ID COMMA CARDINAL
Rule 51    move_def -> move DOSPUNTOS ID
Rule 52    move_def -> move DOSPUNTOS INTEGER
Rule 53    goto_def -> goto DOSPUNTOS ID COMMA ID
Rule 54    goto_def -> goto DOSPUNTOS INTEGER COMMA INTEGER
Rule 55    goto_def -> goto DOSPUNTOS ID COMMA INTEGER
Rule 56    goto_def -> goto DOSPUNTOS INTEGER COMMA ID
Rule 57    turn_def -> turn DOSPUNTOS DIRECTION_TURN
Rule 58    turn_def -> turn DOSPUNTOS LEFTANDRIGHT
Rule 59    face_def -> face DOSPUNTOS CARDINAL
Rule 60    nop_def -> nop DOSPUNTOS
Rule 61    conditions_def -> facing_def
Rule 62    conditions_def -> canputpick_def
Rule 63    conditions_def -> canmoveandjumptothe_def
Rule 64    conditions_def -> canmoveandjumpindir_def
Rule 65    conditions_def -> not_def
Rule 66    facing_def -> facing DOSPUNTOS CARDINAL
Rule 67    canputpick_def -> canput DOSPUNTOS ID COMMA ITEMS
Rule 68    canputpick_def -> canput DOSPUNTOS INTEGER COMMA ITEMS
Rule 69    canputpick_def -> canpick DOSPUNTOS INTEGER COMMA ITEMS
Rule 70    canputpick_def -> canpick DOSPUNTOS ID COMMA ITEMS
Rule 71    canmoveandjumpindir_def -> canmoveindir DOSPUNTOS ID COMMA CARDINAL
Rule 72    canmoveandjumpindir_def -> canmoveindir DOSPUNTOS INTEGER COMMA CARDINAL
Rule 73    canmoveandjumpindir_def -> canjumpindir DOSPUNTOS INTEGER COMMA CARDINAL
Rule 74    canmoveandjumpindir_def -> canjumpindir DOSPUNTOS ID COMMA CARDINAL
Rule 75    canmoveandjumptothe_def -> canmovetothe DOSPUNTOS ID COMMA DIRECTION
Rule 76    canmoveandjumptothe_def -> canmovetothe DOSPUNTOS INTEGER COMMA DIRECTION
Rule 77    canmoveandjumptothe_def -> canjumptothe DOSPUNTOS INTEGER COMMA DIRECTION
Rule 78    canmoveandjumptothe_def -> canjumptothe DOSPUNTOS ID COMMA DIRECTION
Rule 79    canmoveandjumptothe_def -> canmovetothe DOSPUNTOS ID COMMA LEFTANDRIGHT
Rule 80    canmoveandjumptothe_def -> canmovetothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
Rule 81    canmoveandjumptothe_def -> canjumptothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
Rule 82    canmoveandjumptothe_def -> canjumptothe DOSPUNTOS ID COMMA LEFTANDRIGHT
Rule 83    not_def -> not DOSPUNTOS

Terminals, with rules where they appear

CARDINAL             : 47 48 49 50 59 66 71 72 73 74
COMMA                : 6 11 12 13 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 53 54 55 56 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
DIRECTION            : 39 40 41 42 75 76 77 78
DIRECTION_TURN       : 57
DOSPUNTOS            : 12 13 18 18 18 19 19 19 20 20 20 21 21 21 22 22 23 23 24 24 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
ID                   : 5 6 9 10 11 12 13 34 35 38 39 42 43 46 47 50 51 53 53 55 56 67 70 71 74 75 78 79 82
INTEGER              : 12 12 13 13 34 36 37 40 41 44 45 48 49 52 54 54 55 56 68 69 72 73 76 77 80 81
ITEMS                : 35 36 37 38 67 68 69 70
LBRACKET             : 3 9 18 18 19 19 20 20 21 21 22 23 24
LEFTANDRIGHT         : 43 44 45 46 58 79 80 81 82
PLECA                : 9 9
PROCS                : 1 2 3
RBRACKET             : 3 9 18 18 19 19 20 20 21 21 22 23 24
ROBOT_R              : 1 2 3
SEMICOLON            : 4 15
VARS                 : 4
assignTo             : 34
canjumpindir         : 73 74
canjumptothe         : 77 78 81 82
canmoveindir         : 71 72
canmovetothe         : 75 76 79 80
canpick              : 69 70
canput               : 67 68
do                   : 22 23 24
else                 : 18 19 20 21
error                : 
face                 : 59
facing               : 66
goto                 : 53 54 55 56
if                   : 18 19 20 21
jumpindir            : 49 50
jumptothe            : 41 42 45 46
move                 : 51 52
moveindir            : 47 48
movetothe            : 39 40 43 44
nop                  : 60
not                  : 83
pick                 : 37 38
put                  : 35 36
then                 : 18 19 20 21
turn                 : 57 58
while                : 22 23 24

Nonterminals, with rules where they appear

ID_list              : 4 6
assignTo_def         : 25
bloque_def           : 2 3 8
canmoveandjumpindir_def : 64
canmoveandjumptothe_def : 63
canputpick_def       : 62
conditions_def       : 18 19 20 21 22 23 24
face_def             : 32
facing_def           : 61
final_def            : 3 13
func_def             : 9 15
function_def         : 14 15 18 18 19 20 22
goto_def             : 30
id_def               : 7 8
id_func              : 9 11
if_else_def          : 16 19 20 21 21 23
move_def             : 29
moveandjumpindir_def : 28
moveandjumptothe_def : 27
nop_def              : 33
not_def              : 65
prog                 : 0
put_def              : 26
turn_def             : 31
var_def              : 1 2 3
while_def            : 17 24

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . ROBOT_R var_def PROCS
    (2) prog -> . ROBOT_R var_def PROCS bloque_def
    (3) prog -> . ROBOT_R var_def PROCS bloque_def LBRACKET final_def RBRACKET

    ROBOT_R         shift and go to state 2

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .



state 2

    (1) prog -> ROBOT_R . var_def PROCS
    (2) prog -> ROBOT_R . var_def PROCS bloque_def
    (3) prog -> ROBOT_R . var_def PROCS bloque_def LBRACKET final_def RBRACKET
    (4) var_def -> . VARS ID_list SEMICOLON

    VARS            shift and go to state 4

    var_def                        shift and go to state 3

state 3

    (1) prog -> ROBOT_R var_def . PROCS
    (2) prog -> ROBOT_R var_def . PROCS bloque_def
    (3) prog -> ROBOT_R var_def . PROCS bloque_def LBRACKET final_def RBRACKET

    PROCS           shift and go to state 5


state 4

    (4) var_def -> VARS . ID_list SEMICOLON
    (5) ID_list -> . ID
    (6) ID_list -> . ID_list COMMA ID

    ID              shift and go to state 7

    ID_list                        shift and go to state 6

state 5

    (1) prog -> ROBOT_R var_def PROCS .
    (2) prog -> ROBOT_R var_def PROCS . bloque_def
    (3) prog -> ROBOT_R var_def PROCS . bloque_def LBRACKET final_def RBRACKET
    (7) bloque_def -> . id_def
    (8) bloque_def -> . bloque_def id_def
    (9) id_def -> . ID LBRACKET PLECA id_func PLECA func_def RBRACKET

    $end            reduce using rule 1 (prog -> ROBOT_R var_def PROCS .)
    ID              shift and go to state 10

    bloque_def                     shift and go to state 8
    id_def                         shift and go to state 9

state 6

    (4) var_def -> VARS ID_list . SEMICOLON
    (6) ID_list -> ID_list . COMMA ID

    SEMICOLON       shift and go to state 11
    COMMA           shift and go to state 12


state 7

    (5) ID_list -> ID .

    SEMICOLON       reduce using rule 5 (ID_list -> ID .)
    COMMA           reduce using rule 5 (ID_list -> ID .)


state 8

    (2) prog -> ROBOT_R var_def PROCS bloque_def .
    (3) prog -> ROBOT_R var_def PROCS bloque_def . LBRACKET final_def RBRACKET
    (8) bloque_def -> bloque_def . id_def
    (9) id_def -> . ID LBRACKET PLECA id_func PLECA func_def RBRACKET

    $end            reduce using rule 2 (prog -> ROBOT_R var_def PROCS bloque_def .)
    LBRACKET        shift and go to state 13
    ID              shift and go to state 10

    id_def                         shift and go to state 14

state 9

    (7) bloque_def -> id_def .

    LBRACKET        reduce using rule 7 (bloque_def -> id_def .)
    ID              reduce using rule 7 (bloque_def -> id_def .)
    $end            reduce using rule 7 (bloque_def -> id_def .)


state 10

    (9) id_def -> ID . LBRACKET PLECA id_func PLECA func_def RBRACKET

    LBRACKET        shift and go to state 15


state 11

    (4) var_def -> VARS ID_list SEMICOLON .

    PROCS           reduce using rule 4 (var_def -> VARS ID_list SEMICOLON .)


state 12

    (6) ID_list -> ID_list COMMA . ID

    ID              shift and go to state 16


state 13

    (3) prog -> ROBOT_R var_def PROCS bloque_def LBRACKET . final_def RBRACKET
    (12) final_def -> . ID DOSPUNTOS INTEGER COMMA INTEGER
    (13) final_def -> . final_def ID DOSPUNTOS INTEGER COMMA INTEGER

    ID              shift and go to state 18

    final_def                      shift and go to state 17

state 14

    (8) bloque_def -> bloque_def id_def .

    LBRACKET        reduce using rule 8 (bloque_def -> bloque_def id_def .)
    ID              reduce using rule 8 (bloque_def -> bloque_def id_def .)
    $end            reduce using rule 8 (bloque_def -> bloque_def id_def .)


state 15

    (9) id_def -> ID LBRACKET . PLECA id_func PLECA func_def RBRACKET

    PLECA           shift and go to state 19


state 16

    (6) ID_list -> ID_list COMMA ID .

    SEMICOLON       reduce using rule 6 (ID_list -> ID_list COMMA ID .)
    COMMA           reduce using rule 6 (ID_list -> ID_list COMMA ID .)


state 17

    (3) prog -> ROBOT_R var_def PROCS bloque_def LBRACKET final_def . RBRACKET
    (13) final_def -> final_def . ID DOSPUNTOS INTEGER COMMA INTEGER

    RBRACKET        shift and go to state 20
    ID              shift and go to state 21


state 18

    (12) final_def -> ID . DOSPUNTOS INTEGER COMMA INTEGER

    DOSPUNTOS       shift and go to state 22


state 19

    (9) id_def -> ID LBRACKET PLECA . id_func PLECA func_def RBRACKET
    (10) id_func -> . ID
    (11) id_func -> . ID COMMA id_func

    ID              shift and go to state 23

    id_func                        shift and go to state 24

state 20

    (3) prog -> ROBOT_R var_def PROCS bloque_def LBRACKET final_def RBRACKET .

    $end            reduce using rule 3 (prog -> ROBOT_R var_def PROCS bloque_def LBRACKET final_def RBRACKET .)


state 21

    (13) final_def -> final_def ID . DOSPUNTOS INTEGER COMMA INTEGER

    DOSPUNTOS       shift and go to state 25


state 22

    (12) final_def -> ID DOSPUNTOS . INTEGER COMMA INTEGER

    INTEGER         shift and go to state 26


state 23

    (10) id_func -> ID .
    (11) id_func -> ID . COMMA id_func

    PLECA           reduce using rule 10 (id_func -> ID .)
    COMMA           shift and go to state 27


state 24

    (9) id_def -> ID LBRACKET PLECA id_func . PLECA func_def RBRACKET

    PLECA           shift and go to state 28


state 25

    (13) final_def -> final_def ID DOSPUNTOS . INTEGER COMMA INTEGER

    INTEGER         shift and go to state 29


state 26

    (12) final_def -> ID DOSPUNTOS INTEGER . COMMA INTEGER

    COMMA           shift and go to state 30


state 27

    (11) id_func -> ID COMMA . id_func
    (10) id_func -> . ID
    (11) id_func -> . ID COMMA id_func

    ID              shift and go to state 23

    id_func                        shift and go to state 31

state 28

    (9) id_def -> ID LBRACKET PLECA id_func PLECA . func_def RBRACKET
    (14) func_def -> . function_def
    (15) func_def -> . func_def SEMICOLON function_def
    (16) func_def -> . if_else_def
    (17) func_def -> . while_def
    (25) function_def -> . assignTo_def
    (26) function_def -> . put_def
    (27) function_def -> . moveandjumptothe_def
    (28) function_def -> . moveandjumpindir_def
    (29) function_def -> . move_def
    (30) function_def -> . goto_def
    (31) function_def -> . turn_def
    (32) function_def -> . face_def
    (33) function_def -> . nop_def
    (18) if_else_def -> . if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET function_def RBRACKET else DOSPUNTOS LBRACKET function_def RBRACKET
    (19) if_else_def -> . if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET if_else_def RBRACKET else DOSPUNTOS LBRACKET function_def RBRACKET
    (20) if_else_def -> . if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET function_def RBRACKET else DOSPUNTOS LBRACKET if_else_def RBRACKET
    (21) if_else_def -> . if DOSPUNTOS conditions_def then DOSPUNTOS LBRACKET if_else_def RBRACKET else DOSPUNTOS LBRACKET if_else_def RBRACKET
    (22) while_def -> . while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET function_def RBRACKET
    (23) while_def -> . while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET if_else_def RBRACKET
    (24) while_def -> . while DOSPUNTOS conditions_def do DOSPUNTOS LBRACKET while_def RBRACKET
    (34) assignTo_def -> . assignTo DOSPUNTOS INTEGER COMMA ID
    (35) put_def -> . put DOSPUNTOS ID COMMA ITEMS
    (36) put_def -> . put DOSPUNTOS INTEGER COMMA ITEMS
    (37) put_def -> . pick DOSPUNTOS INTEGER COMMA ITEMS
    (38) put_def -> . pick DOSPUNTOS ID COMMA ITEMS
    (39) moveandjumptothe_def -> . movetothe DOSPUNTOS ID COMMA DIRECTION
    (40) moveandjumptothe_def -> . movetothe DOSPUNTOS INTEGER COMMA DIRECTION
    (41) moveandjumptothe_def -> . jumptothe DOSPUNTOS INTEGER COMMA DIRECTION
    (42) moveandjumptothe_def -> . jumptothe DOSPUNTOS ID COMMA DIRECTION
    (43) moveandjumptothe_def -> . movetothe DOSPUNTOS ID COMMA LEFTANDRIGHT
    (44) moveandjumptothe_def -> . movetothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
    (45) moveandjumptothe_def -> . jumptothe DOSPUNTOS INTEGER COMMA LEFTANDRIGHT
    (46) moveandjumptothe_def -> . jumptothe DOSPUNTOS ID COMMA LEFTANDRIGHT
    (47) moveandjumpindir_def -> . moveindir DOSPUNTOS ID COMMA CARDINAL
    (48) moveandjumpindir_def -> . moveindir DOSPUNTOS INTEGER COMMA CARDINAL
    (49) moveandjumpindir_def -> . jumpindir DOSPUNTOS INTEGER COMMA CARDINAL
    (50) moveandjumpindir_def -> . jumpindir DOSPUNTOS ID COMMA CARDINAL
    (51) move_def -> . move DOSPUNTOS ID
    (52) move_def -> . move DOSPUNTOS INTEGER
    (53) goto_def -> . goto DOSPUNTOS ID COMMA ID
    (54) goto_def -> . goto DOSPUNTOS INTEGER COMMA INTEGER
    (55) goto_def -> . goto DOSPUNTOS ID COMMA INTEGER
    (56) goto_def -> . goto DOSPUNTOS INTEGER COMMA ID
    (57) turn_def -> . turn DOSPUNTOS DIRECTION_TURN
    (58) turn_def -> . turn DOSPUNTOS LEFTANDRIGHT
    (59) face_def -> . face DOSPUNTOS CARDINAL
    (60) nop_def -> . nop DOSPUNTOS

    if              shift and go to state 45
    while           shift and go to state 46
    assignTo        shift and go to state 47
    put             shift and go to state 48
    pick            shift and go to state 49
    movetothe       shift and go to state 50
    jumptothe       shift and go to state 51
    moveindir       shift and go to state 52
    jumpindir       shift and go to state 53
    move            shift and go to state 54
    goto            shift and go to state 55
    turn            shift and go to state 56
    face            shift and go to state 57
    nop             shift and go to state 58

    func_def                       shift and go to state 32
    function_def                   shift and go to state 33
    if_else_def                    shift and go to state 34
    while_def                      shift and go to state 35
    assignTo_def                   shift and go to state 36
    put_def                        shift and go to state 37
    moveandjumptothe_def           shift and go to state 38
    moveandjumpindir_def           shift and go to state 39
    move_def                       shift and go to state 40
    goto_def                       shift and go to state 41
    turn_def                       shift and go to state 42
    face_def                       shift and go to state 43
    nop_def                        shift and go to state 44

state 29

    (13) final_def -> final_def ID DOSPUNTOS INTEGER . COMMA INTEGER

    COMMA           shift and go to state 59


state 30

    (12) final_def -> ID DOSPUNTOS INTEGER COMMA . INTEGER

    INTEGER         shift and go to state 60


state 31
